# reports-to-llm

./: .gitignore  CITATION.cff  Cargo.toml  LICENSE  README.md
docs/: provenance-template.md
src/: converters.rs  main.rs  processor.rs
tests/: output_quality.rs
